Spock can be compiled on JDK 10 [WIP]